# RayPulse

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  combined_code.txt  meson.build  meson.build.backup  readme.md
include/: MaterialFactory.h  SceneBuilder.h  SceneConfig.h  SceneLoader.h  camera.h  color.h  export.h  hittable.h  hittable_list.h  interval.h  material.h  paths.h  read_file.h  renderer.h  shader.h  sphere.h  texture.h  utils.h  vec3.h
scenes/: candles.json  cornell_box.json  geometry_test.json  glass_test.json  glossy_cornell.json  roughness_study.json  showcase.json  sss_test.json  test.json  transmission_test.json
shaders/: bloom_blur_h.glsl  bloom_blur_v.glsl  bloom_extract.glsl  compute.glsl  fragment.glsl  vertex.glsl
shaders/compute/: camera.glsl  hittable.glsl  main.glsl  material.glsl  random.glsl
src/: MaterialFactory.cpp  SceneBuilder.cpp  SceneLoader.cpp  export.cpp  main.c  main.cpp  renderer.cpp  shader.cpp  texture.cpp
src/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
src/utils/: color.c  create_image.c  read_file.c  vec3.c
